Fix font sizes, colors and spacing in header, footer and quote

--- a/styles.css
+++ b/styles.css
@@ -24,11 +24,30 @@ footer {
 footer {
     margin-top: auto;
     width: 100%;
+    padding: 8px;
+    text-align: center;
+    font-size: 14px;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
 }
 
 a {
     text-decoration: none;
     color: white;
+}
+
+.intro h1 {
+    font-size: 48px;
+    font-weight: bold;
+    color: #F9FAF8;
+}
+
+.intro p {
+    font-size: 18px;
+    color: #E5E7EB;
 }
 
 .intro img {
@@ -41,6 +60,7 @@ a {
 
 button {
     background-color: #3882F6;
+    border: 2px solid white;
     border-radius: 5px;
     padding: 8px 16px;
     color: white;
@@ -48,8 +68,13 @@ button {
     font-size: 16px;
 }
 
+.intro button {
+    border: 0px;
+}
+
 .logo {
     font-size: 24px;
+    color: #F9FAF8;
     font-weight: bold;
     padding: 8px;
 }
@@ -62,17 +87,47 @@ button {
     padding: 0px 16px;
 }
 
+.examples h2 {
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: bold;
+}
+
 .quote {
     background-color: #E5E7EB;
 }
 
 .signup {
     background-color: #3882F6;
-    margin: 24px;
     padding: 16px;
     display: flex;
+    border-radius: 10px;
+    margin: 16px;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+
+.signupblurb {
+    line-height: 8px;
 }
 
 .signup button {
     margin-left: auto;
+}
+
+.thequote {
+    font-style: oblique;
+    color: #1F2937;
+    font-size: 36px;
+}
+
+.thequote,
+.author {
+    margin: 16px 150px;
+}
+
+.author {
+    text-align: right;
+    font-weight: bold;
 }
